Tidy up a few warnings in GUI